# restic-compose-backup

./: devnotes.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/: Dockerfile  pyproject.toml
src/restic_compose_backup/: cron.py
